gcc/testsuite/gdc.test/compilable/imports/test24390a.d
module imports.test24390a;
public import imports.test24390b;
